# remember

./: .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPTS.md  INSIGHT_FORMAT_SPEC.md  README.md  pyproject.toml
src/remember/: __init__.py  anki_client.py  cli.py  config.py  core.py  parser.py  pull.py  status.py  sync.py
tests/: test_anki_client.py  test_cli.py  test_config.py  test_parser.py  test_pull.py  test_status.py  test_sync.py
tests/fixtures/: test_insights.md
