[project]
name = "remember"
version = "0.1.0"
description = "Sync life insight flashcards from markdown to Anki"
readme = "README.md"
authors = [
    { name = "wrinkledeth", email = "wrinkled.eth@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "httpx",
    "python-dotenv",
    "requests",
]

[project.scripts]
remember = "remember.cli:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
